# rag_agent

./: .gitignore  pyproject.toml
architecture/: rag_agent_architecture.excalidraw
data/: f1_2026_season.md
data/chroma_db/: chroma.sqlite3
src/rag_agent/: rag_agent.py  rag_db.py  rag_ingest.py
src/rag_agent_base/: rag_db.py  rag_query.py
src/rag_agent_tool_calling/agent/: agent.excalidraw  agent.py  rag_agent.py  rag_db.py  rag_env.py  rag_tools.py  root.py
src/rag_agent_tool_calling/tests/: test_rag_db.py
src/rag_brain/: BUILD_PLAN.md  __init__.py  config.py
src/rag_brain/api/: main.py  schemas.py
src/rag_brain/brain/: chunker.py  db.py  graph.py  ingest.py  service.py
src/rag_brain/tests/: test_api.py
