[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
]
[tool.pytest.ini_options]
pythonpath = ["src/rag_agent_tool_calling"]
testpaths = ["src/rag_agent_tool_calling/tests"]
filterwarnings = [
    "ignore::DeprecationWarning:chromadb.*",
]