[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.34.0",
]
[tool.pytest.ini_options]
pythonpath = ["src/rag_agent_tool_calling", "src"]
testpaths = ["src/rag_agent_tool_calling/tests", "src/rag_brain/tests"]
filterwarnings = [
    "ignore::DeprecationWarning:chromadb.*",
]